--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "server.js",
   "author": "Akanstein",
   "license": "MIT",
-  "script" : {
-    "start": "server.js",
-    "build":"yarn cd client && react-scripts build",
+  "scripts" : {
+    "start": "node server.js",
     "server" : "nodemon server.js",
-    "heroku-postbuild":"yarn run build"
+    "client": "cd client && yarn start ",
+    "dev":"concurrently \"yarn run server\" \"yarn run client\" ",
+    "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false cd client && yarn install && yarn run build"
+
   },
   "dependencies": {
     "body-parser": "^1.18.3",
