--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "server" : "nodemon server.js",
     "client": "cd client && yarn start ",
     "dev":"concurrently \"yarn run server\" \"yarn run client\" ",
-    "heroku-postbuild":"cd client && yarn install && yarn run build"
+    "heroku-postbuild":"cd client && yarn install && cd client && yarn run build"
 
   },
   "dependencies": {
