post-build edit 3

--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "author": "Akanstein",
   "license": "MIT",
   "scripts" : {
-    "start": "node server.js && cd client && yarn run build",
+    "start": "node server.js",
     "server" : "nodemon server.js",
     "build": "cd client && yarn run build",
     "client": "cd client && yarn start ",
     "dev":"concurrently \"yarn run server\" \"yarn run client\" ",
-    "heroku-postbuild":"cd client && yarn install"
+    "heroku-postbuild":"cd client && yarn run build"
 
   },
   "dependencies": {
