--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "cd client && yarn run build",
     "client": "cd client && yarn start ",
     "dev":"concurrently \"yarn run server\" \"yarn run client\" ",
-    "heroku-postbuild":"cd client && yarn run deploy"
+    "heroku-postbuild":"cd client yarn run deploy"
 
   },
   "dependencies": {
